# alexlib

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  gpt_docker.py  headlines_dev.ipynb  pyproject.toml  settings.json
.github/runners/: Dockerfile  runnerdeployment.yaml
.github/workflows/: controller-test.yml  main.yaml  next.yaml  poetry-lock-workflow.yaml  self-hosted.yaml
alexlib/: __init__.py  __main__.py  ado.py  attractors.py  attractors_test_cases.md  auth.py  cnfg.py  config.py  config_test_cases.md  constants.py  core.py  core_test_cases.md  crypto.py  crypto_test_cases.md  db.py  df.py  df_test_cases.md  dict.py  envs.py  fake.py  fake_test_cases.md  file.py  files.py  files_test_cases.md  gpt.py  iters.py  iters_test_cases.md  maths.py  mk_test_todos.py  mk_test_todos_test_cases.md  mystdlib.py  norm_mvsk.py  pdfs.py  perf.py  time.py  times.py  times_test_cases.md
alexlib/api/: ado.py  objects.py  objects_test_cases.md
alexlib/db/: etl.py  managers.py  managers_test_cases.md  objects.py  sql.py  utils.py
alexlib/files/: config.py  objects.py  pdfs.py  pdfs_test_cases.md  recipe_test_cases.md  utils.py
alexlib/files/recipe_files/: classic_pretezels.txt  pizza_crust.txt
alexlib/maths/: attractors.py
alexlib/ml/: etl.py  etl_test_cases.md  eval.py  gpt.py  gpt_test_cases.md  llm_response.py  response.py  symbolic_deductive_engine.py
alexlib/projects/: integrate_pytest_coverage.md
alexlib/projects/charts/: draw_bars.py  draw_bars.v0.2.0.py
alexlib/recipe/: object.py  objects.py  white_bread.json  white_bread.txt
alexlib/utils/: __init__.py  df.py  file.py  maths.py  perf.py
data/recipe_files/: beer_cheese.txt  chocolate_chip_cookies.json  chocolate_chip_cookies.txt  pizza_crust.json  white_bread.txt
notebooks/: engine.Dockerfile
projects/: how_to_build_a_symbolic_deductive_engine.md
projects/charts/: draw_bars.py  draw_bars.v0.2.0.py
resources/: clipboard_commands_map.json  column_substitution_map.json  sqlalchemy_dialect_map.json
scripts/: mk_venvs.bash
src/alexlib/: __init__.py  __main__.py  auth.py  constants.py  core.py  crypto.py  df.py  fake.py  iters.py  mk_test_todos.py  times.py
src/alexlib/api/: ado.py  ado_test_cases.md  objects.py
src/alexlib/db/: managers.py  objects.py  objects_test_cases.md  sql.py
src/alexlib/files/: __init__.py  config.py  objects.py  pdfs.py  recipe.py  sizes.py  times.py  types.py  utils.py
src/alexlib/maths/: __init__.py  maths_test_cases.md
src/alexlib/ml/: etl.py  eval.py  gpt.py  llm_response.py  symbolic_deductive_engine.py  symbolic_deductive_engine_test_cases.md
src/notebooks/: Dockerfile
src/recipes/: __init__.py  pdfs.py
src/scripts/: attractors.py  make_test_todos.py  mk_containers.bash  mk_test_todos.py  norm_mvsk.py
tests/: conftest.py  test_alexlib.py  test_auth.py  test_auth_auth_class.py  test_auth_authgenerator_class.py  test_auth_authpart_class.py  test_auth_class.py  test_auth_cnxn_str_class.py  test_auth_documentation_and_usability_testing.py  test_auth_general_setup_for_testing.py  test_auth_gets_auth.py  test_auth_integration_testing.py  test_auth_login_class.py  test_auth_secretstore_class.py  test_auth_server_class.py  test_auth_testing_authgenerator_class.py  test_auth_testing_authpart_class.py  test_auth_testing_curl_class.py  test_auth_testing_username_and_password_classes.py  test_auth_username_and_password_classes.py  test_can_round_datetime.py  test_core.py  test_core_astypes.py  test_core_bools.py  test_core_checks.py  test_core_class_funcs.py  test_core_clipboard.py  test_core_dict_funcs.py  test_core_dump_envs.py  test_core_envcast.py  test_core_envs.py  test_core_hashing.py  test_core_misc.py  test_core_miscellaneous.py  test_core_objects.py  test_core_read_files.py  test_datetime_methods.py  test_db.py  test_db_object.py  test_db_object_column.py  (+46 more)
tests/cases/: auth_test_cases.md  constants_test_cases.md  core_test_cases.md  db_test_cases.md  eval_test_cases.md  llm_response_test_cases.md  sql_test_cases.md  utils_test_cases.md
