[tool.poetry]
name = "alexlib"
version = "1.1.0"
description = "A toolset for building machine learning solutions."
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "alexlib", from = "src" },
    { include = "recipes", from = "src" },
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
matplotlib = "^3.8"
cryptography = "^43.0"
requests = "^2.32"
faker = "^29.0.0"
sqlalchemy = "^2.0"
sqlalchemy-utils = "^0.41"
statsmodels = "^0.14.3"
duckdb = "^1.1.0"
scikit-learn = "^1.5.2"

[tool.poetry.group.docs.dependencies]
reportlab = "^4.0"

[tool.poetry.group.ml.dependencies]
openai = "^1.46"
scipy = "^1.13"

[tool.poetry.group.test.dependencies]
ruff = "^0.6.7"
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-xdist = "^3.6.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"
pre-commit = "^3.0"
sqlfluff = "^3.0"


[tool.pytest.ini_options]
addopts = [
    "--cov=./src/alexlib",
    "--cov-report=term-missing",
    "--cov-fail-under=75",
    "--cov-branch",
    "--durations=10",
    "-n",
    "auto",
]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow to run",
    "skip: mark test as skipped",
    "fast: mark test as fast to run",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
]
extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]

extend-select = ["I"] # Allow linter to sort imports.
fixable = ["ALL"]     # Allow fix for all enabled rules (when `--fix`) is provided.

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"      # Allow unused variables when underscore-prefixed.
select = ["E4", "E7", "E9", "F", "B", "Q", "W", "C", "I", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["alexlib"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [
    "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
